fix(blazorui): correct overflow of operator button in BitMenuButton #8128 (#8129)

--- a/src/BlazorUI/Bit.BlazorUI/Components/Buttons/BitMenuButton/BitMenuButton.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/Buttons/BitMenuButton/BitMenuButton.scss
@@ -2,6 +2,7 @@
 
 .bit-mnb {
     display: flex;
+    overflow: hidden;
     width: fit-content;
     position: relative;
     outline: transparent;
